<resources>
    <string name="app_name">CalculatorMVC</string>
    <string name="Title">CALCULATOR\n</string>
    <string name="enterNum1">Enter Number 1\n</string>
    <string name="enterNum2">Enter Num 2\n</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Times">*</string>
    <string name="Divide">/</string>
    <string name="Clear">CLEAR</string>
    <string name="Result">0.0</string>
    <string name="calculator_button">Calculator Button</string>
    <string name="history_button">History</string>
</resources>